@@ -4,7 +4,7 @@ News
 Pyclewn 1.3
 -----------
 
-.. July 13, 2010
+.. July 14, 2010
 
 New feature
 ^^^^^^^^^^^
@@ -13,9 +13,11 @@ New feature
   watched variable or one of its children, for example to ``hexadecimal`` or
   ``binary``.
 
-Bug fix
-^^^^^^^
+Bug fixes
+^^^^^^^^^
 
+* The test suite fails with Python 2.7. The ``test`` package is meant for
+  Python core developers only, so do not use it anymore and implement our own.
 * Workaround to a RuntimeError Python bug when installing pyclewn with
   Python 2.7 (Matt McCormick).
 * Fix incorrect output in console after the first netbeans session. The
